<resources>
    <string name="app_name">ScrollingDetekceEpi</string>
    <string name="start">Start detekce</string>
    <string name="stop">Přerušit detekci</string>
    <string name="mereni">Pouze měření</string>
    <string name="mereni_detekce">Měření a detekce</string>
    <string name="vysl_mereni">Výsledek měření</string>
    <string name="poz_detekce">True</string>
    <string name="neg_detekce">False</string>
    <string name="vykresleni_grafu">Vykreslení grafu</string>
    <string name="vykresli">Vykresli</string>
    <string name="namerena_data">Naměřená data</string>
    <string name="interpolovana_data">Interpolovaná data</string>
    <string name="ft">Fourierova transformace</string>
    <string name="ovladani">Ovládání detekce</string>
    <string name="vlast_mereni">Vlastnosti měření</string>
    <string name="id_mereni">ID měření:</string>
    <string name="empty">Empty</string>
    <string name="typ_mereni">Typ měření:</string>
    <string name="sdilet_mereni">Sdílet měření</string>
    <string name="kalibrovat">Kalibrovat</string>
    <string name="kalibrace_zarizeni">Kalibrace zařízení</string>
    <string name="napoveda_kalibrace">Položte telefon obrazovkou vzhuru jako by jste ho položili na postel. Potom stihkněte kalibrovat a nehýbejte s telefonem dokud se kalibrace nedokončí.</string>
</resources>
